<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="media">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
</resources>