<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="476dp"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:paddingEnd="28dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_bold"
            android:text="@string/settings"
            android:textSize="22sp"
            android:textColor="@color/black"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="@font/display_regular"
        android:paddingStart="16dp"
        android:paddingEnd="18dp"
        android:text="@string/dark_theme"
        android:textSize="@dimen/settingsFontSize"
        app:thumbTint="@color/grey"
        app:trackTint="@color/light_grey"

        />


    <Button
        android:id="@+id/shareBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/display_regular"
        android:letterSpacing="0"
        android:paddingEnd="16dp"
        android:stateListAnimator="@null"
        android:text="@string/share"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/settingsFontSize"
        app:icon="@drawable/ic_share"
        app:iconGravity="end"
        app:iconTint="@color/grey" />

    <Button
        android:id="@+id/supportBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/display_regular"
        android:letterSpacing="0"
        android:paddingEnd="14dp"
        android:stateListAnimator="@null"
        android:text="@string/support"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/settingsFontSize"
        app:icon="@drawable/ic_support"
        app:iconGravity="end"
        app:iconTint="@color/grey" />

    <Button
        android:id="@+id/agreementBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/display_regular"
        android:letterSpacing="0"
        android:paddingEnd="20dp"
        android:stateListAnimator="@null"
        android:text="@string/user_agreement"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/settingsFontSize"
        app:icon="@drawable/ic_arrow"
        app:iconGravity="end"
        app:iconTint="@color/grey" />
</LinearLayout>