<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingBottom="28dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/ys_display_bold"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/mainFontSize" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/btnMarginStart"
        android:layout_marginEnd="@dimen/btnMarginEnd"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display_bold"
        android:letterSpacing="0"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/mainFontSize"
        app:cornerRadius="@dimen/cornerRadius"

        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icPadding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/mediaBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/btnMarginStart"
        android:layout_marginEnd="@dimen/btnMarginEnd"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display_bold"
        android:letterSpacing="0"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/mainFontSize"
        app:cornerRadius="@dimen/cornerRadius"
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icPadding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/btnMarginStart"
        android:layout_marginEnd="@dimen/btnMarginEnd"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display_bold"
        android:letterSpacing="0"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/mainFontSize"
        app:cornerRadius="@dimen/cornerRadius"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icPadding"
        app:iconTint="@color/black" />
</LinearLayout>